[gd_scene load_steps=27 format=3 uid="uid://daldvo6yqlo5y"]

[ext_resource type="Texture2D" uid="uid://cpu2j2oq5s0lg" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Terrain (16 x 16).png" id="1_461ab"]
[ext_resource type="Script" path="res://levels/scripts/world_01.gd" id="1_j7a3l"]
[ext_resource type="Texture2D" uid="uid://cx8wfnb4vb7qb" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Grassland_entities (16 x 16).png" id="2_310jf"]
[ext_resource type="PackedScene" uid="uid://gw8t5qs7gm7f" path="res://actors/player.tscn" id="3_503b7"]
[ext_resource type="PackedScene" uid="uid://cg5cgj2703nug" path="res://prefabs/lipstick.tscn" id="3_pjd02"]
[ext_resource type="Texture2D" uid="uid://cg0mnlvlfexv" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/5 - Sky_color.png" id="4_3yktg"]
[ext_resource type="PackedScene" uid="uid://c6pmos253layo" path="res://prefabs/goal.tscn" id="4_fj5u5"]
[ext_resource type="Texture2D" uid="uid://e5153mxyq4g4" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/4 - Cloud_cover_2.png" id="5_hpm28"]
[ext_resource type="Shader" path="res://shaders/movement_clouds.gdshader" id="6_5u3q0"]
[ext_resource type="Texture2D" uid="uid://cvdlxdt3oowef" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/3 - Cloud_cover_1.png" id="6_21os7"]
[ext_resource type="Texture2D" uid="uid://16at8bnejy75" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/2 - Hills.png" id="7_h6plr"]
[ext_resource type="Texture2D" uid="uid://dlbmuf5lq8lt4" path="res://assets/Seasonal Tilesets/Seasonal Tilesets/1 - Grassland/Background parts/1 - Foreground_scenery.png" id="8_i5q2d"]
[ext_resource type="Texture2D" uid="uid://cbgh5e3wdexi7" path="res://assets/estatua_liberdade.png" id="8_ybami"]
[ext_resource type="Script" path="res://levels/scripts/transition.gd" id="12_12r3i"]
[ext_resource type="Shader" path="res://shaders/transition.gdshader" id="12_cbnih"]
[ext_resource type="Script" path="res://levels/scripts/color_rect.gd" id="13_carrx"]
[ext_resource type="Script" path="res://levels/scripts/hud_manager.gd" id="15_2qa48"]
[ext_resource type="FontFile" uid="uid://f23ldqm0a0qp" path="res://assets/fonts/RevMiniPixel.ttf" id="16_y1ksj"]
[ext_resource type="Texture2D" uid="uid://b5kywhjrdsotr" path="res://assets/01-lipstick_sprite (1).png" id="18_7r1lb"]
[ext_resource type="Texture2D" uid="uid://do8h6f3yy7uq1" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/Mini UI/Health_Indicator_Black_Outline (8 x 8).png" id="20_6l6rl"]
[ext_resource type="PackedScene" uid="uid://cv7nq2q2v8n0b" path="res://prefabs/pause_menu.tscn" id="21_oa4ug"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v3pj8"]
texture = ExtResource("1_461ab")
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0/physics_layer_0/polygon_0/one_way = true
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0/physics_layer_0/polygon_0/one_way = true
11:3/0 = 0
12:3/0 = 0
12:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:3/0/physics_layer_0/polygon_0/one_way = true
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:3/0/physics_layer_0/polygon_0/one_way = true
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0/physics_layer_0/polygon_0/one_way = true
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:4/0 = 0
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:5/0 = 0
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7dhdc"]
texture = ExtResource("2_310jf")
1:1/size_in_atlas = Vector2i(3, 3)
1:1/0 = 0
5:1/size_in_atlas = Vector2i(3, 3)
5:1/0 = 0
9:1/size_in_atlas = Vector2i(3, 3)
9:1/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
1:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
14:5/0 = 0
16:5/0 = 0
18:5/0 = 0

[sub_resource type="TileSet" id="TileSet_7toor"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_v3pj8")
sources/1 = SubResource("TileSetAtlasSource_7dhdc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rxgtm"]
shader = ExtResource("6_5u3q0")
shader_parameter/move_speed = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tq3sr"]
shader = ExtResource("12_cbnih")
shader_parameter/lines = 10.0
shader_parameter/threshold = 0.0
shader_parameter/line_color_a = Color(1, 1, 1, 1)
shader_parameter/line_color_b = Color(0, 0, 0, 1)

[node name="World-01" type="Node2D"]
position = Vector2(13, 51)
script = ExtResource("1_j7a3l")

[node name="level" type="TileMap" parent="."]
position = Vector2(1, -1)
tile_set = SubResource("TileSet_7toor")
collision_visibility_mode = 2
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(1114114, 196608, 4, 1114115, 196608, 4, 1114116, 196608, 4, 1114117, 196608, 4, 1114118, 196608, 4, 1114119, 196608, 4, 1114120, 196608, 4, 1114121, 196608, 4, 1114124, 196608, 4, 1114125, 196608, 4, 1114126, 196608, 4, 1114127, 196608, 4, 1114128, 196608, 4, 1114129, 196608, 4, 1114130, 196608, 4, 1114131, 196608, 4, 1114132, 196608, 4, 1114133, 196608, 4, 1114134, 196608, 4, 1114135, 196608, 4, 1114136, 196608, 4, 1114137, 196608, 4, 1114138, 196608, 4, 1114139, 196608, 4, 1114140, 196608, 4, 1114141, 196608, 4, 1114142, 196608, 4, 1114143, 196608, 4, 1114144, 196608, 4, 1114145, 196608, 4, 1114146, 196608, 4, 1114147, 196608, 4, 1114148, 196608, 4, 1114149, 196608, 4, 1114150, 196608, 4, 1179650, 196608, 4, 1179651, 196608, 4, 1179652, 196608, 4, 1179653, 196608, 4, 1179654, 196608, 4, 1179655, 196608, 4, 1179656, 196608, 4, 1179657, 196608, 4, 1179658, 196608, 4, 1179659, 196608, 4, 1179660, 196608, 4, 1179661, 196608, 4, 1179662, 196608, 4, 1179663, 196608, 4, 1179664, 196608, 4, 1179665, 196608, 4, 1179666, 196608, 4, 1179667, 196608, 4, 1179668, 196608, 4, 1179669, 196608, 4, 1179670, 196608, 4, 1179671, 196608, 4, 1179672, 196608, 4, 1179673, 196608, 4, 1179674, 196608, 4, 1179675, 196608, 4, 1179676, 196608, 4, 1179677, 196608, 4, 1179678, 196608, 4, 1179679, 196608, 4, 1179680, 196608, 4, 1179681, 196608, 4, 1179682, 196608, 4, 1179683, 196608, 4, 1179684, 196608, 4, 1179685, 196608, 4, 1179686, 196608, 4, 1245186, 196608, 4, 1245187, 196608, 4, 1245188, 196608, 4, 1245189, 196608, 4, 1245190, 196608, 4, 1245191, 196608, 4, 1245192, 196608, 4, 1245193, 196608, 4, 1245194, 196608, 4, 1245195, 196608, 4, 1245196, 196608, 4, 1245197, 196608, 4, 1245198, 196608, 4, 1245199, 196608, 4, 1245200, 196608, 4, 1245201, 196608, 4, 1245202, 196608, 4, 1245203, 196608, 4, 1245204, 196608, 4, 1245205, 196608, 4, 1245206, 196608, 4, 1245207, 196608, 4, 1245208, 196608, 4, 1245209, 196608, 4, 1245210, 196608, 4, 1245211, 196608, 4, 1245212, 196608, 4, 1245213, 196608, 4, 1245214, 196608, 4, 1245215, 196608, 4, 1245216, 196608, 4, 1245217, 196608, 4, 1245218, 196608, 4, 1245219, 196608, 4, 1245220, 196608, 4, 1245221, 196608, 4, 1245222, 196608, 4, 1114122, 196608, 4, 1114123, 196608, 4, 1048578, 262144, 1, 1048579, 262144, 1, 1048580, 262144, 1, 1048581, 262144, 1, 1048582, 262144, 1, 1048583, 262144, 1, 1048584, 262144, 1, 1048585, 262144, 1, 1048586, 262144, 1, 1048587, 262144, 1, 1048588, 262144, 1, 1048589, 262144, 1, 1048590, 262144, 1, 1048591, 262144, 1, 1048592, 262144, 1, 1048593, 262144, 1, 1048594, 262144, 1, 1048595, 262144, 1, 1048596, 262144, 1, 1048597, 262144, 1, 1048598, 262144, 1, 1048599, 262144, 1, 1048600, 262144, 1, 1048604, 262144, 1, 1048605, 262144, 1, 1048606, 262144, 1, 1048607, 262144, 1, 1048608, 262144, 1, 1048609, 262144, 1, 1048610, 262144, 1, 1048611, 262144, 1, 1048612, 262144, 1, 1048613, 262144, 1, 1048614, 262144, 1, 1048577, 262144, 1, 1114113, 262144, 4, 1179649, 262144, 2, 1245185, 262144, 2, 1048576, 262144, 1, 1114112, 262144, 4, 1179648, 262144, 4, 1245184, 327680, 4, 983045, 196608, 2, 917509, 196608, 1, 983047, 327680, 2, 917511, 327680, 1, 917510, 262144, 1, 983046, 262144, 2, 1048601, 196608, 3, 1048602, 262144, 2, 983065, 196608, 1, 1048603, 327680, 3, 983067, 327680, 1, 983066, 262144, 1, 1048615, 262144, 1, 1048616, 262144, 1, 1048617, 262144, 1, 1048618, 262144, 1, 1048619, 262144, 1, 1048620, 262144, 1, 1048621, 262144, 1, 1048622, 262144, 1, 1048623, 262144, 1, 1048624, 262144, 1, 1048625, 262144, 1, 1048626, 262144, 1, 1048627, 262144, 1, 1048628, 262144, 1, 1048629, 262144, 1, 1048630, 262144, 1, 1048631, 262144, 1, 1048632, 262144, 1, 1048633, 262144, 1, 1114151, 262144, 2, 1179687, 262144, 2, 1245224, 262144, 2, 1245223, 262144, 2, 1114152, 262144, 2, 1179688, 262144, 2, 1114153, 262144, 2, 1179689, 262144, 2, 1245225, 262144, 2, 1114154, 262144, 2, 1179690, 262144, 2, 1245226, 262144, 2, 1114155, 262144, 2, 1179691, 262144, 2, 1245227, 262144, 2, 1114156, 262144, 2, 1179692, 262144, 2, 1245228, 262144, 2, 1114157, 262144, 2, 1179693, 262144, 2, 1245229, 262144, 2, 1114158, 262144, 2, 1179694, 262144, 2, 1245230, 262144, 2, 1114159, 262144, 2, 1179695, 262144, 2, 1245231, 262144, 2, 1114160, 262144, 2, 1179696, 262144, 2, 1245232, 262144, 2, 1114161, 262144, 2, 1179697, 262144, 2, 1245233, 262144, 2, 1114162, 262144, 2, 1179698, 262144, 2, 1245234, 262144, 2, 1114163, 262144, 2, 1179699, 262144, 2, 1245235, 262144, 2, 1114164, 262144, 2, 1179700, 262144, 2, 1245236, 262144, 2, 1114165, 262144, 2, 1179701, 262144, 2, 1245237, 262144, 2, 1114166, 262144, 2, 1179702, 262144, 2, 1245238, 262144, 2, 1114167, 262144, 2, 1179703, 262144, 2, 1245239, 262144, 2, 1114168, 262144, 2, 1179704, 262144, 2, 1245240, 262144, 2, 1114169, 262144, 2, 1179705, 262144, 2, 1245241, 262144, 2, 1048634, 262144, 1, 1114170, 262144, 2, 1179706, 262144, 2, 1245242, 262144, 2, 1310719, 327680, 4, 1245183, 262144, 4, 1179647, 262144, 4, 1114111, 327680, 3, 1114110, 196608, 2, 1048574, 196608, 2, 983038, 196608, 2, 983039, 327680, 2, 917503, 327680, 2, 1048575, 327680, 2, 917502, 196608, 2, 851966, 196608, 2, 786430, 196608, 2, 786431, 327680, 2, 851967, 327680, 2, 720895, 327680, 2, 655359, 327680, 2, 589823, 327680, 2, 524287, 327680, 2, 458751, 327680, 2, 393215, 327680, 2, 327679, 327680, 2, 262143, 327680, 2, 196607, 327680, 2, 131071, 327680, 2, 65535, 327680, 2, 65534, 196608, 2, 131070, 196608, 2, 196606, 196608, 2, 262142, 196608, 2, 327678, 196608, 2, 393214, 196608, 2, 458750, 196608, 2, 524286, 196608, 2, 589822, 196608, 2, 655358, 196608, 2, 720894, 196608, 2, 1179646, 196608, 2, 1245182, 196608, 2, 1310718, 196608, 5, -1, 327680, 1, -2, 196608, 1, 786443, 983040, 3, 655375, 983040, 3, 524307, 983040, 3, 393238, 589824, 3, 393239, 655360, 3, 393240, 851968, 3, 983076, 196608, 2, 917540, 196608, 2, 852004, 196608, 1, 852005, 262144, 1, 852006, 327680, 1, 917542, 327680, 2, 983078, 327680, 2, 917541, 262144, 2, 983077, 262144, 2, 983087, 196608, 2, 917551, 196608, 2, 852015, 196608, 1, 983089, 327680, 2, 917553, 327680, 2, 852016, 262144, 1, 852017, 327680, 1, 917552, 262144, 2, 983088, 262144, 2, 1245243, 262144, 2, 1245244, 262144, 2, 1245245, 262144, 2, 1245246, 262144, 2, 1245247, 262144, 2, 1245248, 262144, 2, 1245249, 262144, 2, 1245250, 262144, 2, 1245251, 262144, 2, 1245252, 262144, 2, 1245253, 262144, 2, 1245254, 262144, 2, 1245255, 262144, 2, 1245256, 262144, 2, 1245257, 262144, 2, 1114171, 262144, 2, 1114172, 262144, 2, 1179708, 262144, 2, 1179707, 262144, 2, 1114173, 262144, 2, 1114174, 262144, 2, 1114175, 262144, 2, 1114176, 262144, 2, 1114177, 262144, 2, 1114178, 262144, 2, 1114179, 262144, 2, 1114180, 262144, 2, 1114181, 262144, 2, 1114182, 262144, 2, 1114183, 262144, 2, 1114184, 262144, 2, 1179720, 262144, 2, 1179721, 262144, 2, 1114185, 262144, 2, 1179719, 262144, 2, 1179718, 262144, 2, 1179717, 262144, 2, 1179716, 262144, 2, 1179715, 262144, 2, 1179714, 262144, 2, 1179713, 262144, 2, 1179712, 262144, 2, 1179711, 262144, 2, 1179710, 262144, 2, 1179709, 262144, 2, 1048635, 262144, 1, 1048636, 262144, 1, 1048637, 262144, 1, 1048638, 262144, 1, 1048639, 262144, 1, 1048640, 262144, 1, 1048641, 262144, 1, 1048642, 262144, 1, 1048643, 262144, 1, 1048644, 262144, 1, 1048645, 262144, 1, 1048646, 262144, 1, 1048647, 262144, 1, 1048648, 262144, 1, 1048649, 262144, 1, 1179722, 262144, 2, 1245258, 262144, 2, 1245259, 262144, 2, 1245260, 262144, 2, 1179724, 262144, 2, 1114188, 262144, 2, 1114189, 262144, 2, 1179725, 262144, 2, 1179726, 262144, 2, 1179727, 262144, 2, 1114190, 262144, 2, 1114191, 262144, 2, 1245263, 262144, 2, 1245262, 262144, 2, 1245261, 262144, 2, 1179723, 262144, 2, 1114187, 262144, 2, 1114186, 262144, 2, 1114192, 262144, 2, 1114193, 262144, 2, 1179729, 262144, 2, 1245265, 262144, 2, 1245264, 262144, 2, 1179728, 262144, 2, 1048650, 262144, 1, 1048651, 262144, 1, 1048652, 262144, 1, 1048653, 262144, 1, 1048654, 262144, 1, 1048655, 262144, 1, 1048657, 262144, 1, 1048656, 262144, 1, 852026, 983040, 3, 720957, 983040, 3, 589888, 983040, 3, 458813, 983040, 3, 327738, 983040, 3, 1048658, 262144, 1, 1048659, 262144, 1, 1114194, 262144, 2, 1114195, 262144, 2, 1179731, 262144, 2, 1179730, 262144, 2, 1179732, 262144, 2, 1114196, 262144, 2, 1048660, 262144, 1, 1048661, 262144, 1, 1048662, 262144, 1, 1048663, 262144, 1, 1114197, 262144, 2, 1114198, 262144, 2, 1179734, 262144, 2, 1179733, 262144, 2, 1179735, 262144, 2, 1179736, 262144, 2, 1114199, 262144, 2, 1114200, 262144, 2, 1048664, 262144, 2, 983128, 196608, 5, 917592, 196608, 5, 852056, 196608, 5, 786520, 196608, 5, 720984, 196608, 5, 655448, 196608, 5, 589912, 196608, 5, 524376, 196608, 5, 458840, 196608, 5, 393304, 196608, 5, 327768, 196608, 5, 262232, 196608, 1, 327769, 262144, 2, 393305, 262144, 2, 458841, 262144, 2, 524377, 262144, 2, 589913, 262144, 2, 655449, 262144, 2, 720985, 262144, 2, 786521, 262144, 2, 852057, 262144, 2, 917593, 262144, 2, 983129, 262144, 2, 1048665, 262144, 2, 1114201, 262144, 2, 1179737, 262144, 2, 1245273, 262144, 2, 1310809, 262144, 2, 1310808, 262144, 2, 1310807, 262144, 2, 1310806, 262144, 2, 1310805, 262144, 2, 1310804, 262144, 2, 1310803, 262144, 4, 1245267, 262144, 2, 1245266, 262144, 2, 1245268, 262144, 2, 1245269, 262144, 2, 1245272, 262144, 2, 1245271, 262144, 2, 1245270, 262144, 2, 262233, 262144, 1, 262234, 327680, 1, 327770, 327680, 2, 393306, 327680, 2, 458842, 327680, 2, 524378, 327680, 2, 589914, 327680, 2, 655450, 327680, 2, 720986, 327680, 2, 786522, 327680, 2, 852058, 327680, 2, 917594, 327680, 2, 983130, 327680, 2, 1048666, 327680, 2, 1114202, 327680, 2, 1179738, 327680, 2, 1245274, 327680, 2, 1310810, 327680, 2, 1376345, 262144, 3, 1376346, 327680, 6, 1376344, 262144, 6, 1376343, 262144, 6, 1376342, 262144, 6, 1376341, 262144, 6, 1376340, 262144, 6, 1376339, 262144, 6, 1376335, 262144, 6, 1376336, 262144, 6, 1376337, 262144, 6, 1376338, 262144, 6, 1376334, 262144, 6, 1376333, 262144, 6, 1376332, 262144, 6, 1376331, 262144, 6, 1376330, 262144, 6, 1376329, 262144, 6, 1376328, 262144, 6, 1376327, 262144, 6, 1376326, 262144, 6, 1376325, 262144, 6, 1376324, 262144, 6, 1376323, 262144, 6, 1376322, 262144, 6, 1376321, 262144, 6, 1376320, 262144, 6, 1376319, 262144, 6, 1376318, 262144, 6, 1376317, 262144, 6, 1376316, 262144, 6, 1376315, 262144, 6, 1376314, 262144, 6, 1376313, 262144, 6, 1376312, 262144, 6, 1376311, 262144, 6, 1376310, 262144, 6, 1376309, 262144, 6, 1376308, 262144, 6, 1376307, 262144, 6, 1376306, 262144, 6, 1376305, 262144, 6, 1376304, 262144, 6, 1376303, 262144, 6, 1376302, 262144, 6, 1376301, 262144, 6, 1376300, 262144, 6, 1376299, 262144, 6, 1376298, 262144, 6, 1376297, 262144, 6, 1376296, 262144, 6, 1310802, 262144, 4, 1310801, 262144, 4, 1310800, 262144, 4, 1310799, 262144, 4, 1310798, 262144, 4, 1310797, 262144, 4, 1310796, 262144, 4, 1310795, 262144, 4, 1310794, 262144, 4, 1310793, 262144, 4, 1310792, 262144, 4, 1310791, 262144, 4, 1310790, 262144, 4, 1310789, 262144, 4, 1310788, 262144, 4, 1310787, 262144, 4, 1310786, 262144, 4, 1310785, 262144, 4, 1310784, 262144, 4, 1310783, 262144, 4, 1310782, 262144, 4, 1310781, 262144, 4, 1310780, 262144, 4, 1310779, 262144, 4, 1310778, 262144, 4, 1310777, 262144, 4, 1310776, 262144, 4, 1310775, 262144, 4, 1310774, 262144, 4, 1310773, 262144, 4, 1310772, 262144, 4, 1310771, 262144, 4, 1310770, 262144, 4, 1310769, 262144, 4, 1310768, 262144, 4, 1310767, 262144, 4, 1310766, 262144, 4, 1310765, 262144, 4, 1310764, 262144, 4, 1310763, 262144, 4, 1310762, 262144, 4, 1310761, 262144, 4, 1310760, 262144, 4, 1376295, 262144, 6, 1376294, 262144, 6, 1376293, 262144, 6, 1376292, 262144, 6, 1376291, 262144, 6, 1376290, 262144, 6, 1376289, 262144, 6, 1376288, 262144, 6, 1376287, 262144, 6, 1376286, 262144, 6, 1376285, 262144, 6, 1376284, 262144, 6, 1376283, 262144, 6, 1376282, 262144, 6, 1376281, 262144, 6, 1376280, 262144, 6, 1376279, 262144, 6, 1376278, 262144, 6, 1376277, 262144, 6, 1376276, 262144, 6, 1376275, 262144, 6, 1376274, 262144, 6, 1376273, 262144, 6, 1376272, 262144, 6, 1376271, 262144, 6, 1376270, 262144, 6, 1376269, 262144, 6, 1376268, 262144, 6, 1376267, 262144, 6, 1376266, 262144, 6, 1376265, 262144, 6, 1376264, 262144, 6, 1376263, 262144, 6, 1376262, 262144, 6, 1376261, 262144, 6, 1376260, 262144, 6, 1376259, 262144, 6, 1376258, 262144, 6, 1376257, 262144, 6, 1376256, 262144, 6, 1441791, 262144, 6, 1441790, 196608, 6, 1376254, 196608, 5, 1376255, 327680, 4, 1310720, 327680, 4, 1310721, 327680, 4, 1310722, 327680, 4, 1310723, 327680, 4, 1310724, 327680, 4, 1310725, 327680, 4, 1310726, 327680, 4, 1310727, 327680, 4, 1310728, 327680, 4, 1310729, 327680, 4, 1310730, 327680, 4, 1310731, 327680, 4, 1310732, 327680, 4, 1310733, 327680, 4, 1310734, 327680, 4, 1310735, 327680, 4, 1310736, 327680, 4, 1310737, 327680, 4, 1310738, 327680, 4, 1310739, 327680, 4, 1310740, 327680, 4, 1310741, 327680, 4, 1310742, 327680, 4, 1310743, 327680, 4, 1310744, 327680, 4, 1310745, 327680, 4, 1310746, 327680, 4, 1310747, 327680, 4, 1310748, 327680, 4, 1310749, 327680, 4, 1310750, 327680, 4, 1310751, 327680, 4, 1310752, 327680, 4, 1310753, 327680, 4, 1310754, 327680, 4, 1310755, 327680, 4, 1310756, 327680, 4, 1310757, 327680, 4, 1310758, 327680, 4, 1310759, 327680, 4)
layer_1/name = "trees"
layer_1/tile_data = PackedInt32Array(851974, 196609, 5, 983055, 327681, 5, 983056, 393217, 5, 983057, 458753, 5, 983058, 458753, 5, 983063, 65537, 5, 917570, 327681, 1, 917590, 327681, 1, 983112, 458753, 5, 983113, 458753, 5, 983114, 458753, 5, 983115, 458753, 5, 983116, 458753, 5, 983086, 65537, 5, 983079, 65537, 5, 983075, 65537, 5, 983090, 65537, 5)

[node name="lipsticks" type="Node2D" parent="."]

[node name="lipstick" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(389, 72)
scale = Vector2(0.8, 0.8)

[node name="lipstick2" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(935, 56)
scale = Vector2(0.8, 0.8)

[node name="lipstick3" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(667, 165)
scale = Vector2(0.8, 0.8)

[node name="lipstick4" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(310, 98)
scale = Vector2(0.8, 0.8)

[node name="lipstick5" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(247, 128)
scale = Vector2(0.8, 0.8)

[node name="lipstick6" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(183, 161)
scale = Vector2(0.8, 0.8)

[node name="lipstick7" parent="lipsticks" instance=ExtResource("3_pjd02")]
position = Vector2(934, 183)
scale = Vector2(0.8, 0.8)

[node name="goal" parent="." instance=ExtResource("4_fj5u5")]
position = Vector2(1288, 254)
scale = Vector2(1.5, 1.5)
next_level = "res://levels/world_02.tscn"

[node name="player" parent="." instance=ExtResource("3_503b7")]

[node name="BG" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer5" type="ParallaxLayer" parent="BG"]
position = Vector2(13, 51)
motion_mirroring = Vector2(432, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer5"]
position = Vector2(0, -97)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_3yktg")
centered = false

[node name="ParallaxLayer9" type="ParallaxLayer" parent="BG"]
position = Vector2(26, 102)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer9"]
position = Vector2(0, -97)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_ybami")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="BG"]
position = Vector2(13, 51)
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(432, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer4"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_hpm28")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="BG"]
position = Vector2(13, 51)
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(432, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer3"]
texture_repeat = 2
material = SubResource("ShaderMaterial_rxgtm")
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_21os7")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG"]
position = Vector2(13, 51)
motion_scale = Vector2(0.7, 1)
motion_mirroring = Vector2(432, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer2"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_h6plr")
centered = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG"]
position = Vector2(13, 51)
motion_scale = Vector2(0.9, 1)
motion_mirroring = Vector2(432, 0)

[node name="Sprite2D" type="Sprite2D" parent="BG/ParallaxLayer"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_i5q2d")
centered = false

[node name="transition" type="CanvasLayer" parent="."]
script = ExtResource("12_12r3i")

[node name="color_rect" type="ColorRect" parent="transition"]
material = SubResource("ShaderMaterial_tq3sr")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 1)
script = ExtResource("13_carrx")
metadata/_edit_use_anchors_ = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_2qa48")

[node name="container" type="MarginContainer" parent="HUD/control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="lipsticks_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="lipsticks_icon" type="TextureRect" parent="HUD/control/container/lipsticks_container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("18_7r1lb")
stretch_mode = 6

[node name="lipsticks_counter" type="Label" parent="HUD/control/container/lipsticks_container"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("16_y1ksj")
theme_override_font_sizes/font_size = 20
text = "0000
"
vertical_alignment = 1

[node name="life_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="life_icon" type="TextureRect" parent="HUD/control/container/life_container"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("20_6l6rl")
expand_mode = 3
stretch_mode = 6

[node name="life_separator" type="Label" parent="HUD/control/container/life_container"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("16_y1ksj")
theme_override_font_sizes/font_size = 18
text = "X
"
vertical_alignment = 1

[node name="life_counter" type="Label" parent="HUD/control/container/life_container"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("16_y1ksj")
theme_override_font_sizes/font_size = 18
text = "3
"
vertical_alignment = 1

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_smoothed = true
drag_left_margin = 0.6
drag_right_margin = 0.6
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="pause_menu" parent="." instance=ExtResource("21_oa4ug")]
